lab 9 in progress

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jest": "^28.1.1",
     "pg": "^8.7.3",
     "sequelize": "^6.21.0",
     "sequelize-cli": "^6.4.1",
-    "sqlite3": "^5.0.8"
+    "sqlite3": "^5.0.8",
+    "supertest": "^6.2.3"
   },
   "name": "auth-module-project-09",
   "description": "",
@@ -14,10 +16,10 @@
   "scripts": {
     "start": "node index.js",
     "lint": "eslint **/*.js",
-    "test": "NODE_ENV=jest --verbose --coverage",
+    "test": "NODE_ENV=test jest --verbose --coverage",
     "db:config": "sequelize init:config",
     "db:create": "sequelize db:create",
-    "test-watch": "NODE_ENV=jest --watchAll --verbose --coverage"
+    "test-watch": "NODE_ENV=test jest --watchAll --verbose --coverage"
   },
   "repository": {
     "type": "git",
