--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "start": "node index.js",
     "lint": "eslint **/*.js",
     "test": "NODE_ENV=test jest --verbose --coverage",
+    "test-watch": "NODE_ENV=test jest --watchAll --verbose --coverage",
     "db:config": "sequelize init:config",
-    "db:create": "sequelize db:create",
-    "test-watch": "NODE_ENV=test jest --watchAll --verbose --coverage"
+    "db:create": "sequelize db:create"
   },
   "repository": {
     "type": "git",
