updates to lab09, completed user routes and rbac

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "development": {
-        "username": "sson68x",
+        "username": "elizabethelisha",
         "password": null,
         "database": "auth-module",
         "host": "127.0.0.1",
